// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 kylHls"
  data-cy="test-hero"
>
  <div
    className="hero__HeroContentWrapper-sc-qftwzr-1 dEHppu"
  >
    <div
      className="hero___StyledDiv-sc-qftwzr-6 hubuVj"
    >
      <p
        className="hero___StyledP-sc-qftwzr-8 hbWiGQ"
      >
        Instrument
      </p>
      <h1
        className="hero__HeroTitle-sc-qftwzr-2 ivhDcq"
      >
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv2-sc-qftwzr-9 eJqIxP"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="typeahead-box___StyledDiv-sc-1kp6jj-0 eiHfjF"
      >
        <span
          className="typeahead-box___StyledSpan-sc-1kp6jj-1 bSFocE"
        >
          Data Shortcut
        </span>
        <div
          className="typeahead-box___StyledDiv2-sc-1kp6jj-2 byvdUB"
        >
          <input
            className="typeahead-box___StyledInput-sc-1kp6jj-3 ddjRvz"
            onChange={[Function]}
            placeholder="Go directly to a campaign, platform, or instrument"
            type="text"
            value=""
          />
          <span
            aria-label="Arrow icon"
            className="typeahead-box___StyledSpan2-sc-1kp6jj-4 cKpRpq"
            role="img"
          >
            <svg
              className="arrow-icon___StyledSvg-sc-nsdqlv-0 bgejTZ"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Arrow 
                right
              </title>
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <polygon
                fill="#e9eaec"
                points="7.586,2.414 12.172,7 0,7 0,9 12.172,9 7.586,13.586 9,15 16,8 9,1"
              />
            </svg>
          </span>
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 kylHls"
  data-cy="undefined-hero"
>
  <div
    className="hero__HeroContentWrapper-sc-qftwzr-1 ehQfhu"
  >
    <div
      className="hero___StyledDiv-sc-qftwzr-6 hubuVj"
    >
      <p
        className="hero___StyledP-sc-qftwzr-8 hbWiGQ"
      >
        Instrument
      </p>
      <h1
        className="hero__HeroTitle-sc-qftwzr-2 ivhDcq"
      >
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv2-sc-qftwzr-9 eJqIxP"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="typeahead-box___StyledDiv-sc-1kp6jj-0 eiHfjF"
      >
        <span
          className="typeahead-box___StyledSpan-sc-1kp6jj-1 bSFocE"
        >
          Data Shortcut
        </span>
        <div
          className="typeahead-box___StyledDiv2-sc-1kp6jj-2 byvdUB"
        >
          <input
            className="typeahead-box___StyledInput-sc-1kp6jj-3 ddjRvz"
            onChange={[Function]}
            placeholder="Go directly to a campaign, platform, or instrument"
            type="text"
            value=""
          />
          <span
            aria-label="Arrow icon"
            className="typeahead-box___StyledSpan2-sc-1kp6jj-4 cKpRpq"
            role="img"
          >
            <svg
              className="arrow-icon___StyledSvg-sc-nsdqlv-0 bgejTZ"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Arrow 
                right
              </title>
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <polygon
                fill="#e9eaec"
                points="7.586,2.414 12.172,7 0,7 0,9 12.172,9 7.586,13.586 9,15 16,8 9,1"
              />
            </svg>
          </span>
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;
